--- a/contact/index.html
+++ b/contact/index.html
@@ -28,8 +28,8 @@
 <meta property="og:title" content="Contact">
 
 
-  <link rel="canonical" href="https://4brunu.github.io/_pages/contact">
-  <meta property="og:url" content="https://4brunu.github.io/_pages/contact">
+  <link rel="canonical" href="https://4brunu.github.io/contact/">
+  <meta property="og:url" content="https://4brunu.github.io/contact/">
 
 
 
@@ -38,7 +38,7 @@
   <meta name="twitter:site" content="@4brunu">
   <meta name="twitter:title" content="Contact">
   <meta name="twitter:description" content="iOS, Android and Code">
-  <meta name="twitter:url" content="https://4brunu.github.io/_pages/contact">
+  <meta name="twitter:url" content="https://4brunu.github.io/contact/">
 
   
     <meta name="twitter:card" content="summary">
