--- a/404.html
+++ b/404.html
@@ -28,8 +28,8 @@
 <meta property="og:title" content="404 - Page Not Found">
 
 
-  <link rel="canonical" href="https://4brunu.github.io/404/">
-  <meta property="og:url" content="https://4brunu.github.io/404/">
+  <link rel="canonical" href="https://4brunu.github.io/404.html">
+  <meta property="og:url" content="https://4brunu.github.io/404.html">
 
 
 
@@ -40,7 +40,7 @@
   <meta name="twitter:site" content="@4brunu">
   <meta name="twitter:title" content="404 - Page Not Found">
   <meta name="twitter:description" content="Page not found. Your pixels are in another canvas.">
-  <meta name="twitter:url" content="https://4brunu.github.io/404/">
+  <meta name="twitter:url" content="https://4brunu.github.io/404.html">
 
   
     <meta name="twitter:card" content="summary">
