--- a/_pages/category-archive.html
+++ b/_pages/category-archive.html
@@ -5,6 +5,7 @@ title: "Posts by Category"
 author_profile: true
 ---
 
+<!--
 {% include group-by-array collection=site.posts field="categories" %}
 
 {% for category in group_names %}
@@ -14,3 +15,33 @@ author_profile: true
     {% include archive-single.html %}
   {% endfor %}
 {% endfor %}
+-->
+
+{% capture site_categories %}{% for category in site.categories %}{{ category | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
+{% assign categories_list = site_categories | split:',' | sort %}
+
+<!-- Start category array header -->
+<ul class="entry-meta inline-list">
+  {% for item in (0..site.categories.size) %}{% unless forloop.last %}
+    {% capture this_word %}{{ categories_list[item] | strip_newlines }}{% endcapture %}
+  	<li><a href="#{{ this_word | slugify | downcase }}" class="tag"><span class="term">{{ this_word }}</span> <span class="count">{{ site.categories[this_word].size }}</span></a></li>
+  {% endunless %}{% endfor %}
+</ul>
+<!-- End category array header -->
+
+
+{% include group-by-array collection=site.posts field="categories" %}
+
+<!-- Start category list -->
+{% for category in group_names %}
+  {% assign posts = group_items[forloop.index0] %}
+  <article>
+  <h2 id="{{ category | slugify | downcase }}" class="archive__subtitle"><a href="{{ category | slugify | downcase }}">{{ category }}</a></h2>
+  <ul>
+  	{% for post in posts %}{% if post.title != null %}
+      <li><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+    {% endif %}{% endfor %}
+  </ul>
+  </article><!-- /.hentry -->
+{% endfor %}
+<!-- End category list -->
