--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -5,7 +5,22 @@ title: "Posts by Tags"
 author_profile: true
 ---
 
-<!--
+inicio
+{% include tag-list.html %}
+fim
+
+inicio 2
+{% for tag in group_names %}
+	<a class="tag" href="/blog/tag/#{{ tag | slugify }}">{{ tag }}</a>
+{% endfor %}
+fim 2
+
+inicio 3
+{% for tag in group_names %}
+	<a class="page__taxonomy-item" rel="tag" href="/blog/tag/#{{ tag | slugify }}">{{ tag }}</a>
+{% endfor %}
+fim 3
+
 {% include group-by-array collection=site.posts field="tags" %}
 
 {% for tag in group_names %}
@@ -15,30 +30,3 @@ author_profile: true
     {% include archive-single.html %}
   {% endfor %}
 {% endfor %}
--->
-
-{% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
-{% assign tags_list = site_tags | split:',' | sort %}
-
-<!-- Start tag array header -->
-<ul class="entry-meta inline-list">
-  {% for item in (0..site.tags.size) %}{% unless forloop.last %}
-    {% capture this_word %}{{ tags_list[item] | strip_newlines }}{% endcapture %}
-  	<li><a href="#{{ this_word | slugify | downcase }}" class="tag"><span class="term">{{ this_word }}</span> <span class="count">{{ site.tags[this_word].size }}</span></a></li>
-  {% endunless %}{% endfor %}
-</ul>
-<!-- End tag array header -->
-
-<!-- Start tag list -->
-{% for item in (0..site.tags.size) %}{% unless forloop.last %}
-  {% capture this_word %}{{ tags_list[item] | strip_newlines }}{% endcapture %}
-	<article>
-	<h2 id="{{ this_word | slugify | downcase }}" class="archive__subtitle"><a href="{{ this_word | slugify | downcase }}">{{ this_word }}</a></h2>
-		<ul>
-    {% for post in site.tags[this_word] %}{% if post.title != null %}
-      <li><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
-    {% endif %}{% endfor %}
-		</ul>
-	</article><!-- /.hentry -->
-{% endunless %}{% endfor %}
-<!-- End tag list -->
