--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -30,6 +30,17 @@ to the `site_tags` variable. -->
 {% assign tag_words = site_tags | split:',' | sort %}
 fim 4
 
+inicio 5
+<!-- Start tag array header -->
+<ul class="entry-meta inline-list">
+  {% for item in (0..site.tags.size) %}{% unless forloop.last %}
+    {% capture this_word %}{{ tags_list[item] | strip_newlines }}{% endcapture %}
+  	<li><a href="#{{ this_word | slugify | downcase }}" class="tag"><span class="term">{{ this_word }}</span> <span class="count">{{ site.tags[this_word].size }}</span></a></li>
+  {% endunless %}{% endfor %}
+</ul>
+<!-- End tag array header -->
+fim 5
+
 {% include group-by-array collection=site.posts field="tags" %}
 
 {% for tag in group_names %}
