--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -74,6 +74,24 @@ inicio 7
 
 fim 7
 
+inicio 8
+
+<!-- Get the tag name for every tag on the site and set them
+to the `site_tags` variable. -->
+{% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
+
+<!-- `tag_words` is a sorted array of the tag names. -->
+{% assign tag_words = site_tags | split:',' | sort %}
+
+{% for item in (0..site.tags.size) %}{% unless forloop.last %}
+  {% capture this_word %}{{ tag_words[item] }}{% endcapture %}
+  <a href="#{{ this_word | cgi_escape }}" class="page__taxonomy-item" rel="tag">{{ this_word }}
+    <span>({{ site.tags[this_word].size }})</span>
+  </a>
+{% endunless %}{% endfor %}
+
+fim 8
+
 
 
 {% include group-by-array collection=site.posts field="tags" %}
