--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -94,24 +94,23 @@ fim 8
 
 inicio 9
 
-{% comment %}
-  <!-- Sort alphabetically regardless of case e.g. a B c d E -->
-  <!-- modified from http://www.codeofclimber.ru/2015/sorting-site-tags-in-jekyll/ -->
-{% endcomment %}
-{% capture page_tags %}{% for tag in page.tags %}{{ tag | downcase }}#{{ tag }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
-{% assign tag_hashes = (page_tags | split: ',' | sort:0) %}
+<!-- Get the tag name for every tag on the site and set them
+to the `site_tags` variable. -->
+{% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
+
+<!-- `tag_words` is a sorted array of the tag names. -->
+{% assign tag_words = site_tags | split:',' | sort %}
 
 <p class="page__taxonomy">
-  <strong><i class="fa fa-fw fa-tags" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].tags_label | default: "Tags:" }} </strong>
   <span itemprop="keywords">
-  {% for hash in tag_hashes %}
-    {% assign keyValue = hash | split: '#' %}
-    {% capture tag_word %}{{ keyValue[1] | strip_newlines }}{% endcapture %}
-    <a href="{{ tag_word | slugify | prepend: path_type | prepend: site.tag_archive.path | absolute_url }}" class="page__taxonomy-item" rel="tag">{{ tag_word }}</a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
-  {% endfor %}
+    {% for item in (0..site.tags.size) %}{% unless forloop.last %}
+      {% capture this_word %}{{ tag_words[item] }}{% endcapture %}
+      <a href="{{ tag_word | slugify | prepend: path_type | prepend: site.tag_archive.path | absolute_url }}" class="page__taxonomy-item" rel="tag">{{ this_word }}
+        <span>({{ site.tags[this_word].size }})</span>
+      </a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
+    {% endunless %}{% endfor %}
   </span>
 </p>
-
 
 fim 9
 
