--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -10,15 +10,17 @@ author_profile: true
 {% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
 {% assign tag_words = site_tags | split:',' | sort %}
 
-<p class="page__taxonomy">
-  <span itemprop="keywords">
-    {% for item in (0..site.tags.size) %}{% unless forloop.last %}
-      {% capture this_word %}{{ tag_words[item] }}{% endcapture %}
-      <a href="{{ tag_word | slugify | prepend: path_type | prepend: site.tag_archive.path | absolute_url }}" class="page__taxonomy-item" rel="tag">{{ this_word }}
-        <span>({{ site.tags[this_word].size }})</span>
-      </a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
-    {% endunless %}{% endfor %}
-  </span>
+<p class="page__meta">
+  <p class="page__taxonomy">
+    <span itemprop="keywords">
+      {% for item in (0..site.tags.size) %}{% unless forloop.last %}
+        {% capture this_word %}{{ tag_words[item] }}{% endcapture %}
+        <a href="{{ tag_word | slugify | prepend: path_type | prepend: site.tag_archive.path | absolute_url }}" class="page__taxonomy-item" rel="tag">{{ this_word }}
+          <span>({{ site.tags[this_word].size }})</span>
+        </a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
+      {% endunless %}{% endfor %}
+    </span>
+  </p>
 </p>
 
 {% include group-by-array collection=site.posts field="tags" %}
