--- a/_pages/category-archive.html
+++ b/_pages/category-archive.html
@@ -15,7 +15,7 @@ author_profile: true
     <span itemprop="keywords">
       {% for item in (0..site.categories.size) %}{% unless forloop.last %}
         {% capture this_word %}{{ categories_list[item] | strip_newlines }}{% endcapture %}
-        <a href="{{ category_word | slugify | prepend: path_type | prepend: site.category_archive.path | absolute_url }}" class="page__taxonomy-item" rel="tag">{{ this_word }}
+        <a href="#{{ this_word | slugify | downcase }}" class="page__taxonomy-item" rel="tag">{{ this_word }}
           <span>({{ site.categories[this_word].size }})</span>
         </a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
       {% endunless %}{% endfor %}
