--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -18,8 +18,7 @@ author_profile: true
         <!-- <a href="#{{ this_word | slugify | downcase }}" class="page__taxonomy-item" rel="tag">{{ this_word }}</a> -->
         <a href="#{{ this_word | slugify | downcase }}" class="page__taxonomy-item" rel="tag">{{ this_word }}
           <span>({{ site.tags[this_word].size }})</span>
-        </a>
-        <!-- {% unless forloop.last %}<span class="sep">, </span>{% endunless %} -->
+        </a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
       {% endunless %}{% endfor %}
     </span>
   </p>
