--- a/_pages/category-archive.html
+++ b/_pages/category-archive.html
@@ -10,7 +10,7 @@ author_profile: true
 {% capture site_categories %}{% for category in site.categories %}{{ category | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
 {% assign categories_list = site_categories | split:',' | sort %}
 
-<p class="page__meta">
+<footer class="page__meta">
   <p class="page__taxonomy">
     <span itemprop="keywords">
       {% for item in (0..site.categories.size) %}{% unless forloop.last %}
@@ -21,7 +21,7 @@ author_profile: true
       {% endunless %}{% endfor %}
     </span>
   </p>
-</p>
+</footer>
 
 {% include group-by-array collection=site.posts field="categories" %}
 
