Updating to 4brunu/4brunu.github.io@a0a5fa53a04be435265161b65162496ed7d9a154.

--- a/about/index.html
+++ b/about/index.html
@@ -276,7 +276,19 @@
       
 
       <section class="page__content" itemprop="text">
-        <p>This is the base Jekyll theme. You can find out more info about customizing your Jekyll theme, as well as basic Jekyll usage documentation at <a href="http://jekyllrb.com/">jekyllrb.com</a></p>
+        <p>My name is Bruno Coelho.</p>
+
+<p>I’m a Software Developer in Portugal.</p>
+
+<p>I started to make iOS apps on 2011, and Android in 2013, but iOS remain’s my main focus.</p>
+
+<p>I have interest in Software Architecture, Continuous Delivery/Continuous Integration, among others.</p>
+
+<p>This is my personal blog, that born of my desire to give something back to the community.</p>
+
+<p>Here you can find some of my experience with mainly iOS and Android development.</p>
+
+<p>The opinions expressed here are my own.</p>
 
         
       </section>
