Updating to 4brunu/4brunu.github.io@566ff2ae404c516ce369c9b3cf4c96eb6ba445b5.

--- a/about/index.html
+++ b/about/index.html
@@ -290,7 +290,7 @@
 
 <p>Here you can find some of my experience with mainly iOS and Android development.</p>
 
-<p>The opinions expressed here are my own.</p>
+<p>Please note, that the opinions expressed here are my own.</p>
 
         
       </section>
