Updating to 4brunu/4brunu.github.io@f8219f1f35721988b4e051ad8d976952a671ea53.

--- a/year-archive/index.html
+++ b/year-archive/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--
-  Minimal Mistakes Jekyll Theme 4.11.1 by Michael Rose
+  Minimal Mistakes Jekyll Theme 4.11.2 by Michael Rose
   Copyright 2013-2018 Michael Rose - mademistakes.com | @mmistakes
   Free for personal and commercial use under the MIT license
   https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE.txt
@@ -394,7 +394,7 @@
 
     
   <script src="/assets/js/main.min.js"></script>
-  <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+  <script src="https://use.fontawesome.com/releases/v5.0.12/js/all.js"></script>
 
 
 
@@ -413,6 +413,7 @@
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-76819575-1', 'auto');
+  ga('set', 'anonymizeIp', true)
   ga('send', 'pageview');
 </script>
 
